[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kismet"
version = "0.1.0"
description = "Autonomous CLI agent for AI-guided image harvesting with local LLM planning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.26.0",
    "rich>=13.7.0",
    "pillow>=10.2.0",
    "pydantic>=2.6.0",
    "typer>=0.9.0",
    "ollama>=0.1.7",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]

[project.scripts]
kismet = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
